# pgRAG

./: .gitignore  README.md  config.local.example.yaml  pyproject.toml  requirements.txt  semantic_viz.html
diagrams/: pgrag_current_design.mmd
pgrag/: __main__.py  cli.py  config.py  db.py  embeddings.py  foundry.py  ingest.py  ollama.py  rag.py  retrieval.py
scripts/: visualize_pgvector.py
